# serial-example

./: .travis.yml  CMakeLists.txt
cmake/: FindSerial.cmake
dependencies/: CMakeLists.txt  build.sh
scripts/: travis.sh
